--- a/style.css
+++ b/style.css
@@ -1,41 +1,205 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,800);
+
+:root {
+  --dark: #181818;
+  --gray: #1d1d1d;
+  --white: #eee6e6;
+  --accent: #ff9701;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-:root {
-  --dark: #181818;
-  --gray: #1d1d1d;
-  --white: #f0e9e9;
-  --accent: #ff9701;
-}
+
 html {
   scroll-behavior: smooth;
 }
-li {
-  color: var(--white);
-  list-style-type: none;
-  font-style: italic;
-}
 
-.header {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-a:hover {
-  color: var(--accent);
-}
 a {
   color: var(--white);
   text-decoration: none;
   background-color: transparent;
 }
 
-.mg-b {
-  margin-bottom: 2rem;
+a:hover {
+  color: var(--accent);
+}
+
+span {
+  color: var(--accent);
+}
+
+section {
+  padding: 4rem 0;
+  min-height: 100%;
+}
+
+li {
+  color: var(--white);
+  list-style-type: none;
+}
+
+/* Custome classes */
+
+.accent {
+  color: var(--accent);
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 1.25rem;
+}
+
+#contact .container {
+  max-width: 950px;
+  margin: auto auto;
+}
+
+@media (min-width: 993px) {
+  .container {
+    width: 1130px;
+    max-width: 95%;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 993px) {
+  #contact .container {
+    max-width: 96%;
+    margin: auto auto;
+  }
+}
+@media screen and (max-width: 560px) {
+  #contact .container {
+    max-width: 100%;
+    padding: 0;
+    margin: auto auto;
+    text-align: center;
+  }
+}
+
+/* Header styles */
+
+h1 {
+  color: var(--white);
+  opacity: 0.85;
+  font-size: 40px;
+  font-weight: 900;
+  text-transform: uppercase;
+  line-height: 1.4;
+}
+h2 {
+  font-size: 35px;
+  color: var(--white);
+  font-weight: 900;
+}
+
+h1 span {
+  padding: 2px 8px 00px 8px;
+  background-color: var(--accent);
+  color: var(--dark);
+}
+
+@media (min-width: 540px) {
+  h1 {
+    font-size: 60px;
+    line-height: 1.6;
+  }
+
+  h1 span {
+    padding: 3px 12px 00px 12px;
+  }
+}
+
+@media (min-width: 993px) {
+  h1 {
+    font-size: 110px;
+    line-height: 1.2;
+  }
+
+  h1 span {
+    padding: 8px 20px 00px 20px;
+  }
+
+  h2 {
+    font-size: 60px;
+    color: var(--white);
+    font-weight: 700;
+    margin-bottom: 4rem !important;
+  }
+}
+
+/* Button styles */
+
+.button {
+  appearance: none;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--white);
+  border-radius: 65px;
+  box-sizing: border-box;
+  color: var(--white);
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0;
+  outline: none;
+  padding: 0.6rem 2.2rem;
+  text-align: center;
+  text-decoration: none;
+  transition: all 800ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.button:disabled {
+  pointer-events: none;
+}
+
+.button:hover {
+  color: var(--dark);
+  border: 2px solid var(--accent);
+  background-color: var(--accent);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+}
+
+.button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+.hero-section-content .button {
+  margin-top: 3rem;
+}
+
+@media (max-width: 993px) {
+  .hero-section-content .button {
+    margin-bottom: 3rem;
+  }
+}
+
+@media (min-width: 993px) {
+  .button {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 1rem 3.2rem;
+  }
+}
+
+/* Hero Section */
+
+.header {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .hero-section-background {
@@ -106,46 +270,7 @@ nav {
   }
 }
 
-h1 {
-  color: var(--white);
-  opacity: 0.85;
-  font-size: 40px;
-  font-weight: 900;
-  text-transform: uppercase;
-  line-height: 1.4;
-}
-
-h1 span {
-  padding: 2px 8px 00px 8px;
-  background-color: var(--accent);
-  color: var(--dark);
-}
-
-@media (min-width: 540px) {
-  h1 {
-    font-size: 60px;
-    line-height: 1.6;
-  }
-
-  h1 span {
-    padding: 3px 12px 00px 12px;
-  }
-}
-
-@media (min-width: 993px) {
-  h1 {
-    font-size: 110px;
-    line-height: 1.2;
-  }
-
-  h1 span {
-    padding: 8px 20px 00px 20px;
-  }
-}
-
-.text.pl-3 {
-  z-index: 20;
-}
+/* Socials */
 
 .socials {
   position: absolute;
@@ -167,6 +292,13 @@ h1 span {
 }
 .socials .trip_advisor {
   min-width: 30px;
+  fill: var(--white) !important;
+  opacity: 1 !important;
+}
+
+.socials .trip_advisor:hover {
+  min-width: 30px;
+  fill: var(--accent) !important;
 }
 
 .socials svg {
@@ -175,6 +307,11 @@ h1 span {
 
 .socials svg:hover {
   fill: var(--accent);
+}
+
+.trip_advisor .icon,
+.trip_advisor .text {
+  cursor: pointer;
 }
 
 @media (max-width: 993px) {
@@ -207,55 +344,54 @@ h1 span {
 
 .about {
   width: 100%;
-  padding: 100px 0;
+  padding: 70px 0;
   background-color: var(--dark);
-}
-span {
-  color: var(--accent);
-}
-
-.about img {
-  height: auto;
-  width: 430px;
 }
 
 .about-text {
   width: 100%;
-  padding: 0 1.25rem;
 }
 
-.main {
-  margin: 0 auto;
+.about-wrapper {
   display: flex;
   flex-direction: column-reverse;
 }
-h2 {
-  color: white;
-  font-size: 45px;
-  text-transform: capitalize;
-  margin-bottom: 0.825rem;
-}
 
 .about-text h5 {
-  color: white;
+  color: var(--white);
+  font-weight: 100;
   letter-spacing: 2px;
-  font-size: 18px;
-  margin-bottom: 0.825rem;
+  font-size: 26px;
+  margin-bottom: 1rem;
   text-transform: capitalize;
 }
+.about-text p,
+.about-text li {
+  color: var(--white);
+  line-height: 1.5;
+  font-weight: 100;
+  font-size: 16px;
+}
+
 .about-text p {
-  color: white;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .about-img {
   position: relative;
   width: 100%;
+  margin: 0 auto;
   height: auto;
+  border-radius: 1rem;
+  max-height: 400px;
+  margin-top: 2rem;
 }
 .about-img img {
   width: 100%;
   height: 100%;
+  border-radius: 1rem;
+  max-height: 400px;
+  object-fit: cover;
 }
 .about-img::after {
   content: "";
@@ -264,24 +400,27 @@ h2 {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(22, 22, 22, 0.215);
+  background-color: rgba(22, 22, 22, 0.405);
   opacity: 1;
+  border-radius: 1rem;
 }
 
 @media (min-width: 993px) {
-  .main {
-    width: 1130px;
-    max-width: 95%;
-    margin: 0 auto;
+  .about-wrapper {
     align-items: center;
     justify-content: space-around;
-    flex-direction: row;
+    flex-direction: row-reverse;
     gap: 5rem;
   }
 
   .about-img {
     width: 40%;
     height: auto;
+    max-height: initial;
+    margin-top: 0rem;
+  }
+  .about-img img {
+    max-height: initial;
   }
 
   .about-text {
@@ -289,221 +428,35 @@ h2 {
     padding: 0;
   }
 
-  h2 {
-    font-size: 75px;
-    margin-bottom: 20px;
-  }
-
   .about-text h5 {
-    letter-spacing: 2px;
-    font-size: 22px;
-    margin-bottom: 1.825rem;
+    letter-spacing: 2.3px;
+    font-size: 36px;
+    margin-bottom: 1.2rem;
+  }
+  .about-text p,
+  .about-text li {
+    font-size: 18px;
+    letter-spacing: 1.6;
+    font-style: normal;
+  }
+
+  .about-text p {
+    margin-bottom: 6rem;
   }
 }
 
-section {
-  padding: 7rem 0;
-  min-height: 100%;
-}
-
-.contact-section {
-  background: url("./img/bar_crawl2.jpeg") center no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-form {
-  position: relative;
-  z-index: 20;
-}
-
-.button {
-  appearance: none;
-  background-color: rgba(0, 0, 0, 0.1);
-  border: 1px solid #dfdfdf;
-  border-radius: 65px;
-  box-sizing: border-box;
-  color: #ececec;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: normal;
-  margin: 0;
-  outline: none;
-  padding: 0.6rem 2.2rem;
-  text-align: center;
-  text-decoration: none;
-  transition: all 800ms cubic-bezier(0.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  will-change: transform;
-}
-
-.button:disabled {
-  pointer-events: none;
-}
-
-.button:hover {
-  color: rgb(0, 0, 0);
-  border: 2px solid var(--accent);
-  background-color: var(--accent);
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-}
-
-.button:active {
-  box-shadow: none;
-  transform: translateY(0);
-}
-
-.button_hero-section {
-  margin-top: 3rem;
-}
-
-@media (max-width: 993px) {
-  .button_about-section {
-    margin-bottom: 3rem;
+@media (max-width: 560px) {
+  .about-img {
+    max-height: 300px;
+  }
+  .about-img img {
+    max-height: 300px;
   }
 }
 
-.btn.btn-primary {
-  border-radius: 65px;
-  padding: 0.4rem 3.2rem;
-  min-height: 40px;
-}
+/* GALLERY */
 
-@media (min-width: 993px) {
-  .button {
-    font-size: 16px;
-    font-weight: 500;
-    padding: 1rem 3.2rem;
-  }
-
-  .btn.btn-primary {
-    min-height: 55px;
-  }
-}
-
-@media (max-width: 767px) {
-  .col-lg-10 {
-    padding: 0;
-  }
-
-  section.contact-section {
-    padding: 0;
-  }
-
-  .row.justify-content-center {
-    background-color: #272a34;
-  }
-  .contact-section {
-    background: #272a34;
-  }
-
-  .contact-section::after {
-    display: none;
-  }
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:focus {
-  transition: background-color 600000s 0s, color 600000s 0s;
-}
-
-.icon-img {
-  width: 30px;
-  height: auto;
-  cursor: pointer;
-}
-
-.trip_advisor .icon,
-.trip_advisor .text {
-  cursor: pointer;
-}
-.smaller-icon {
-  width: 25px;
-  cursor: pointer;
-}
-
-.text a {
-  color: white !important;
-}
-.text a:hover {
-  color: var(--accent) !important;
-}
-
-.restriction-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: #000000a9;
-}
-
-.restriction-box {
-  position: absolute;
-  width: 650px;
-  height: 300px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ececec;
-  border-radius: 1rem;
-  padding: 2rem 3rem;
-  opacity: 0.9;
-}
-.restriction-box p {
-  padding: 0.5rem 0rem 1.25rem 0;
-}
-
-.restriction-button {
-  background-color: #272a34;
-  border-radius: 0.25rem;
-  color: white;
-  padding: 0.75rem 1.25rem;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-.restriction-button:hover {
-  background-color: var(--accent);
-}
-
-.restriction-overlay.remove,
-.restriction-box.remove {
-  animation: remove-overlay;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes remove-overlay {
-  0% {
-    visibility: visible;
-    opacity: 1;
-  }
-
-  99% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-
-@media (max-width: 767px) {
-  .restriction-box {
-    width: 90%;
-    height: 460px;
-    padding: 1.5rem 2rem;
-  }
-}
-
-/*SWIPER */
-
-/* Swiper slides styles */
+/* Swiper Galery slides styles */
 
 #swiper-section {
   min-height: 100vh;
@@ -556,8 +509,6 @@ input:-webkit-autofill:focus {
 
 .swiper-title {
   text-align: center;
-  font-size: 60px;
-  letter-spacing: 1;
   margin-bottom: 2rem;
 }
 
@@ -575,69 +526,33 @@ input:-webkit-autofill:focus {
   width: initial;
   height: initial;
   margin-top: initial;
+  transition: 0.3s ease color;
 }
 
 .swiper-button-next,
 .swiper-button-prev {
-  color: rgb(234, 228, 228) !important;
+  color: var(--white);
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  color: var(--accent);
 }
 
 .swiper-button-next::after,
 .swiper-button-prev::after {
-  font-size: 50px !important;
+  font-size: 50px;
   font-weight: 800;
 }
 
 @media (max-width: 993px) {
-  /* .swiper-section-container {
-    height: auto;
-  }
-  #swiper-section {
-    min-height: initial;
-    padding: 4rem 0 8rem 0;
-  }
-
-  .swiper-title {
-    margin-bottom: 3rem;
-    font-size: 40px;
-  }
-
-  .swiper-slide {
-  }
-
-  .swiper-buttons {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    flex-direction: row-reverse;
-    gap: 2rem;
-  }
-
   .swiper-button-next::after,
   .swiper-button-prev::after {
-    font-size: 40px !important;
-    font-weight: 800;
-  } */
+    font-size: 30px;
+  }
 }
 
-/* .svg_logo {
-  fill: #dfdfdf;
-  width: 23px;
-} */
-
-.icon .trip_advisor {
-  width: 30px;
-  height: auto;
-  fill: #ececec;
-}
-
-#pricing-section {
-  background-color: var(--gray);
-}
-
-.pricing-title {
-  text-align: center;
-}
+/* Contact Section */
 
 #contact {
   background-image: url(./img/bar_crawl2.jpeg);
@@ -645,6 +560,7 @@ input:-webkit-autofill:focus {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  padding: 5.2rem 0 2rem 0;
 }
 
 #contact::after {
@@ -657,11 +573,6 @@ input:-webkit-autofill:focus {
   background-color: var(--dark);
   opacity: 0.1;
   pointer-events: none;
-}
-
-#contact .container {
-  max-width: 900px;
-  margin: auto auto;
 }
 
 .contact-wrapper {
@@ -692,8 +603,8 @@ input:-webkit-autofill:focus {
   color: var(--white);
 }
 .form-title {
-  margin-bottom: 2rem;
-  line-height: 0.5;
+  margin-bottom: 5rem;
+  line-height: 0.2;
   font-size: 32px;
 }
 
@@ -705,18 +616,19 @@ input:-webkit-autofill:focus {
 
 .info-description {
   color: #666666;
+  margin-bottom: 5rem;
 }
 
 #contact .form-control {
   font-size: 16px;
+  margin-bottom: 3rem;
 }
 
 #contact .form-control {
   display: block;
   width: 100%;
-  height: 52px;
   background: transparent;
-  color: rgb(255, 255, 255);
+  color: var(--white);
   font-size: 14px;
   font-weight: 400;
   line-height: 1.5;
@@ -725,7 +637,7 @@ input:-webkit-autofill:focus {
   box-shadow: none;
   border: none;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 0;
+  padding: 0.1rem;
 }
 
 .form-control:focus {
@@ -823,10 +735,12 @@ textarea:focus::-moz-placeholder {
 
 .btn.btn-primary {
   border-radius: 65px;
+  font-size: 16px;
   cursor: pointer;
   min-height: 50px;
   background-color: var(--accent);
   border: none;
+  padding: 0.4rem 2.4rem;
   color: var(--white);
   transition: background-color 0.5s ease, border-color 0.5s ease;
 }
@@ -849,4 +763,284 @@ textarea:focus::-moz-placeholder {
   color: #28a745;
   font-size: 18px;
   font-weight: 500;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+
+@media screen and (max-width: 993px) {
+  .contact-wrapper {
+    flex-direction: column;
+  }
+  .info-wrapper {
+    border-radius: 15px 15px 0px 0;
+  }
+  .form-wrapper {
+    margin: 0 auto;
+    border-radius: 15px 15px 15px 15px;
+  }
+
+  #contact .container {
+    max-width: 96%;
+    margin: auto auto;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  #contact .container {
+    max-width: 100%;
+    margin: auto auto;
+    text-align: center;
+  }
+
+  section#contact {
+    padding: 0;
+  }
+  .info-wrapper {
+    padding-top: 4rem;
+    border-radius: 0 0 0 0;
+  }
+  .form-wrapper {
+    padding-top: 6rem;
+    border-radius: 0 0 15px 15px;
+  }
+
+  .contact-info {
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+  }
+
+  .contact-info li {
+    width: 20%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .contact-info--item p {
+    display: none;
+  }
+}
+
+/* Age Restriction content */
+
+.restriction-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #000000a9;
+}
+
+.restriction-box {
+  position: absolute;
+  width: 650px;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--white);
+  border-radius: 1rem;
+  padding: 2rem 3rem;
+  opacity: 0.9;
+}
+.restriction-box p {
+  padding: 0.5rem 0rem 1.25rem 0;
+}
+
+.restriction-button {
+  background-color: #272a34;
+  border-radius: 0.25rem;
+  color: var(--white);
+  padding: 0.75rem 1.25rem;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.restriction-button:hover {
+  background-color: var(--accent);
+}
+
+.restriction-overlay.remove,
+.restriction-box.remove {
+  animation: remove-overlay;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes remove-overlay {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 767px) {
+  .restriction-box {
+    width: 90%;
+    height: 460px;
+    padding: 1.5rem 2rem;
+  }
+}
+
+/* Pricing Section */
+
+#pricing {
+  background-color: var(--gray);
+}
+
+h2.pricing-title {
+  text-align: center;
+  margin-bottom: 2rem !important;
+}
+
+.plan-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.plan-icon svg path {
+  fill: #ff9701;
+}
+
+.pricing-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+}
+
+#pricing .accent {
+  text-align: center;
+  margin-bottom: 6rem;
+  font-size: 20px;
+}
+.pricing-plan {
+  position: relative;
+  border-radius: 1.25rem;
+  margin: 0;
+  width: 40%;
+  max-width: 350px;
+  background-color: #262626;
+  border: 1px solid #1e1e1e;
+
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.4s ease-in-out, transform 0.4s ease-in-out,
+    background-color 0.4s ease-in-out;
+}
+
+.pricing-plan:hover {
+  transform: scale(1.05);
+  box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.3);
+  background-color: #222121;
+}
+
+.plan-header-wrapper {
+  display: flex;
+  padding: 2rem 0.925rem;
+}
+
+.plan-header-wrapper .plan-icon {
+  transition: transform 0.4s ease-in-out;
+  margin: 0 1rem;
+}
+.pricing-plan:hover .plan-icon {
+  transform: scale(1.3);
+}
+
+.plan-header {
+  color: var(--white);
+}
+
+.plan-title {
+  font-size: 20px;
+  font-weight: 800;
+  color: var(--white);
+  text-transform: uppercase;
+}
+
+.plan-cost {
+  margin: 0;
+  opacity: 0.4;
+}
+.plan-cost span {
+  color: var(--white);
+}
+
+.plan-price {
+  font-weight: 800;
+  font-size: 1.3rem;
+}
+.plan-type {
+  opacity: 0.8;
+  font-size: 0.7em;
+  text-transform: uppercase;
+}
+
+.plan-features {
+  padding: 0;
+  margin: 0 0 40px;
+  flex-grow: 1;
+  text-align: center;
+  list-style: outside none none;
+  font-size: 1rem;
+  text-align: left;
+}
+
+.plan-features li {
+  padding: 5px 5%;
+  font-weight: 500;
+  opacity: 0.5;
+  border-left: 5px solid #f39c12;
+  margin: 2px 20px;
+}
+
+.plan-btn {
+  max-width: fit-content;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  font-weight: 800;
+  font-size: 16px;
+  min-height: 45px !important;
+}
+.plan-select {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 1.25rem 1.25rem;
+  padding: 1.5rem;
+}
+
+@media screen and (max-width: 993px) {
+  .pricing-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pricing-plan {
+    width: 90%;
+    max-width: 600px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .pricing-plan {
+    width: 96%;
+    max-width: 420px;
+  }
 }
